--- a/app/package.json
+++ b/app/package.json
@@ -17,9 +17,12 @@
     "@types/node": "17.0.23",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
-    "sass": "^1.50.0",
+    "postcss": "^8.4.12",
+    "sass": "^1.50.1",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
 }
