--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 
+# PWA files
+/sw.js
+/sw.js.map
+/workbox-*.js
+/workbox-*.js.map
+/worker-*.js
+/worker-*.js.map
+
 # Local databases and Python stuff
 paco-fa-database.json
 paco-da-database.json
