--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.7.1",
     "next": "12.1.4",
+    "next-pwa": "^5.5.2",
     "react": "18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
@@ -22,6 +25,7 @@
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
     "autoprefixer": "^10.4.4",
+    "cssnano": "^5.1.7",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "postcss": "^8.4.12",
