--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,4 +1,8 @@
 {
   "extends": "next/core-web-vitals",
-  "rules": { "react/no-unescaped-entities": "off" }
+  "rules": {
+    "@next/next/no-img-element": "off",
+    "react/no-unescaped-entities": "off",
+    "no-console": "warn"
+  }
 }
