--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/components/*": ["src/components/*"],
-      "@/styles/*": ["src/styles/*"],
-      "@/models/*": ["src/models/*"]
+      "@/components/*": ["components/*"],
+      "@/styles/*": ["styles/*"],
+      "@/models/*": ["models/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
