--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,8 +1,7 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
     "@next/next/no-img-element": "off",
-    "react/no-unescaped-entities": "off",
-    "no-console": "warn"
+    "react/no-unescaped-entities": "off"
   }
 }
