--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-chartjs-2": "^4.1.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-intersection-observer": "^9.2.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -26,7 +27,9 @@
     "cssnano": "^5.1.7",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
     "sass": "^1.50.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
