--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "chart.js": "^3.7.1",
@@ -25,6 +26,7 @@
     "@types/react-dom": "18.0.0",
     "autoprefixer": "^10.4.4",
     "cssnano": "^5.1.7",
+    "cypress": "^10.3.1",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.5.0",
