--- a/app/.prettierrc
+++ b/app/.prettierrc
@@ -3,5 +3,6 @@
   "tabWidth": 2,
   "quoteProps": "consistent",
   "trailingComma": "none",
-  "semi": false
+  "semi": false,
+  "useTabs": false
 }
