--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,25 @@
 version: 2
 
 updates:
-- package-ecosystem: npm
+- package-ecosystem: "composer"
   directory: '/'
   schedule:
     interval: weekly
     time: '00:00'
-  open-pull-requests-limit: 10
-  reviewers:
+  open-pull-requests-limit: 1
+  assignees:
     - skepfusky
+  commit-message:
+    prefix: fix
+    prefix-development: chore
+    include: scope
+
+- package-ecosystem: "composer"
+  directory: '/app'
+  schedule:
+    interval: weekly
+    time: '00:00'
+  open-pull-requests-limit: 10
   assignees:
     - skepfusky
   commit-message:
