--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
 - package-ecosystem: "npm"
   directory: '/'
   schedule:
-    interval: weekly
+    interval: monthly
     time: '00:00'
   open-pull-requests-limit: 1
   assignees:
@@ -17,7 +17,7 @@ updates:
 - package-ecosystem: "npm"
   directory: '/app'
   schedule:
-    interval: weekly
+    interval: monthly
     time: '00:00'
   open-pull-requests-limit: 10
   assignees:
