--- a/app/package.json
+++ b/app/package.json
@@ -9,18 +9,20 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "chart.js": "^3.7.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.2.2"
+    "react-intersection-observer": "^9.2.2",
+    "sass": "^1.54.3",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "18.6.4",
     "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
@@ -32,8 +34,6 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.16",
     "prettier": "^2.6.2",
-    "sass": "^1.54.3",
-    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
