--- a/.github/workflows/paco-updater.yaml
+++ b/.github/workflows/paco-updater.yaml
@@ -1,20 +1,24 @@
+name: "Panda Paco Drawing Daily Updater"
+
 on:
+  push:
   schedule:
-    - cron "0 0 * * *"
+    - cron: "0 0 * * *"
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
 
     steps:
-      - name: checkout actions
+      - name: "checkout repo"
         uses: actions/checkout@v2
-      - name: setup python
-        uses: actions/setup-python@v2
+      - name: "setup python"
+        uses: actions/setup-python@v4.2.0
         with:
-          python-version: 3.10
-        - name: execute python script
-          run: |
-            python -m pip install --upgrade pip
-        
-
+          python-version: "3.9"
+      - name: "update packages"
+        run: |
+          cd server; pip install -r requirements.txt;
+      - name: "execute script"
+        run: |
+          python server/updater.py
