--- a/.github/workflows/paco-updater.yaml
+++ b/.github/workflows/paco-updater.yaml
@@ -2,17 +2,15 @@ name: "Panda Paco Drawing Daily Updater"
 
 on:
   push:
-    branches: [ "updater" ]
   schedule:
     - cron: "0 0 * * *"
-    branches: [ "updater" ]
 
 jobs:
   build:
     runs-on: "ubuntu-latest"
 
     steps:
-      - name: "Checkout repo"
+      - name: "checkout repo"
         uses: actions/checkout@v2
       - name: "setup python"
         uses: actions/setup-python@v4.2.0
@@ -20,7 +18,7 @@ jobs:
           python-version: "3.9"
       - name: "update packages"
         run: |
-          pip install bs4 requests
+          cd server; pip install -r requirements.txt;
       - name: "execute script"
         run: |
-          python updater.py
+          python server/updater.py
