--- a/app/package.json
+++ b/app/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mdx-js/loader": "^2.1.3",
+    "@mdx-js/react": "^2.1.3",
+    "@next/mdx": "^12.2.5",
     "next": "12.2.5",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.2.2",
-    "sass": "^1.54.4",
-    "tailwindcss": "^3.1.8"
+    "react-intersection-observer": "^9.2.2"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
@@ -29,8 +31,11 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
+    "next-compose-plugins": "^2.2.1",
     "postcss": "^8.4.16",
     "prettier": "^2.6.2",
+    "sass": "^1.54.4",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
