IT WORKED BAHAHAHAHA
This is tiring

It compiles just fine how the heck

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,10 @@ package-lock.json*
 pnpm-lock.yaml*
 
 updater.json
+
+**/sw.js
+**/sw.js.map
+**/workbox-*.js
+**/workbox-*.js.map
+**/worker-*.js
+**/worker-*.js.map
