--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"],
+  "extends": "next/core-web-vitals",
   "rules": {
     "react/no-unescaped-entities": "off"
   }
