--- a/app/package.json
+++ b/app/package.json
@@ -1,41 +1,28 @@
 {
-  "name": "pacopanda-stats-next",
+  "name": "next-ts-tailwind",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && prettier --write .",
-    "cypress": "cypress open"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mdx-js/loader": "^2.1.3",
-    "@mdx-js/react": "^2.1.3",
-    "@next/mdx": "^12.2.5",
-    "next": "12.3.1",
-    "next-pwa": "^5.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.2.2"
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.23",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
-    "cypress": "^10.4.0",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^8.5.0",
-    "next-compose-plugins": "^2.2.1",
+    "@types/node": "^18.7.21",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.24.0",
+    "eslint-config-next": "^12.3.1",
     "postcss": "^8.4.16",
-    "prettier": "^2.6.2",
-    "sass": "^1.54.4",
+    "sass": "^1.55.0",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.3"
   }
 }
