--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-ts-tailwind",
+  "name": "paco-drawing-stats-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "eslint": "^8.24.0",
     "eslint-config-next": "^12.3.1",
     "postcss": "^8.4.16",
+    "redis": "^4.4.0",
     "sass": "^1.55.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
