--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.12",
+    "cypress": "^10.11.0",
     "eslint": "^8.24.0",
     "eslint-config-next": "^12.3.1",
     "postcss": "^8.4.16",
