--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/utils/*": ["utils/*"],
+      "@/styles/*": ["styles/*"],
+    },
+    "baseUrl": "./src",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
