--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,6 +20,9 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
-    "redis": "^4.5.1"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "sass": "^1.56.1",
+    "tailwindcss": "^3.2.4"
   }
 }
