--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -20,8 +20,14 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.13",
+    "framer-motion": "^7.6.18",
     "postcss": "^8.4.19",
+    "react-intersection-observer": "^9.4.1",
     "sass": "^1.56.1",
     "tailwindcss": "^3.2.4"
   }
