--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,26 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.10",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "next": "13.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.3"
-  },
-  "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/node": "18.11.10",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
     "framer-motion": "^7.6.18",
+    "next": "13.0.5",
     "postcss": "^8.4.19",
+    "react": "18.2.0",
     "react-intersection-observer": "^9.4.1",
+    "react-dom": "18.2.0",
     "sass": "^1.56.1",
+    "swr": "^2.0.0",
+    "typescript": "4.9.3",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "redis": "^4.5.1"
   }
 }
