--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,1 @@
-# Ignore next.js apps
-node_modules
-.next
-/out
-/dist
-/build
-
-/.pnp
-.pnp.js
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# local env files
-.env*.local
-next-env.d.ts
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-
-# PWA files
-**/sw.js
-**/sw.js.map
-**/workbox-*.js
-**/workbox-*.js.map
-**/worker-*.js
-**/worker-*.js.map
-
-# Python environment
-.idea
-__pycache__*
-
-python/**/Include
-python/**/Lib
-python/**/Scripts
-python/**/pyvenv.cfg
-
-redis_config.json
-data*.json
-
-*.ipynb
+**/node_modules/
