--- a/apps/char-mgmt/package.json
+++ b/apps/char-mgmt/package.json
@@ -33,6 +33,6 @@
     "react-dom": "^18.2.0",
     "sass": "^1.57.0",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.2"
+    "typescript": "4.9.3"
   }
 }
