--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   ],
   "devDependencies": {
     "concurrently": "^7.6.0",
-    "husky": "^8.0.0"
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
   },
   "scripts": {
-    "prepare": "husky install",
     "postinstall": "yarn workspace @pds/char-mgmt postinstall",
     "dev:web": "yarn workspace @pds/app dev",
     "dev:char": "yarn workspace @pds/char-mgmt dev",
