🔥 Monorepo: create and move to shared configs

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,7 @@
   "semi": false,
   "tabWidth": 2,
   "quoteProps": "consistent",
+  "singleQuote": false,
+  "arrowParens": "always",
   "trailingComma": "none"
 }
