--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.0.5",
     "framer-motion": "^7.6.18",
     "next": "13.0.5",
+    "next-transpile-modules": "^10.0.0",
     "postcss": "^8.4.19",
     "react": "18.2.0",
     "react-intersection-observer": "^9.4.1",
