--- a/packages/biro-ui-react/package.json
+++ b/packages/biro-ui-react/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^18.0.9",
     "eslint": "8.28.0",
     "react": "18.2.0",
+    "tsconfig": "*",
     "typescript": "4.9.3"
   }
 }
