--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -13,20 +13,21 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@types/node": "18.11.10",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@next/font": "13.0.7",
+    "@types/node": "18.11.15",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.7",
     "framer-motion": "^7.6.18",
-    "next": "13.0.5",
+    "next": "13.0.7",
     "next-transpile-modules": "^10.0.0",
-    "postcss": "^8.4.19",
+    "postcss": "^8.4.20",
     "react": "18.2.0",
     "react-intersection-observer": "^9.4.1",
     "react-dom": "18.2.0",
-    "sass": "^1.56.1",
+    "sass": "^1.56.2",
     "swr": "^2.0.0",
     "typescript": "4.9.3",
     "tailwindcss": "^3.2.4"
