--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,9 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
 root = true
 
 [*]
-indent_style = space
+indent_style = tab
 indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = false
-
-[*.py]
-indent_size = 2
