--- a/app/website/package.json
+++ b/app/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pds-nuxt-app",
+  "name": "@pds/website",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -9,6 +9,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "nuxt": "^3.0.0"
   }
 }
