--- a/app/website/package.json
+++ b/app/website/package.json
@@ -9,7 +9,15 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.3.0",
+    "@nuxtjs/color-mode": "^3.2.0",
+    "@pinia/nuxt": "^0.4.6",
     "@tailwindcss/typography": "^0.5.9",
-    "nuxt": "^3.0.0"
+    "nuxt": "^3.0.0",
+    "pinia": "^2.0.29"
+  },
+  "dependencies": {
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/open-sans": "^4.5.14"
   }
 }
