--- a/app/website/package.json
+++ b/app/website/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
-    "@fontsource/open-sans": "^4.5.14"
+    "@fontsource/open-sans": "^4.5.14",
+    "@vueuse/core": "^9.11.1"
   }
 }
