--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "workspaces": [
     "app/*",
-    "packages/*",
+    "packages/shared",
     "puppeteer"
   ],
   "scripts": {
