--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,16 +9,18 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/open-sans": "^4.5.14",
     "@nuxt/content": "^2.3.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia/nuxt": "^0.4.6",
     "@tailwindcss/typography": "^0.5.9",
+    "@vueuse/core": "^9.11.1",
+    "autoprefixer": "^10.4.13",
     "nuxt": "^3.0.0",
-    "pinia": "^2.0.29"
-  },
-  "dependencies": {
-    "@fontsource/inter": "^4.5.15",
-    "@fontsource/open-sans": "^4.5.14",
-    "@vueuse/core": "^9.11.1"
+    "pinia": "^2.0.29",
+    "postcss": "^8.4.21",
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4"
   }
 }
