🖌️ Add more on base styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "[vue]": {
-        "editor.defaultFormatter": "Vue.volar"
-    }
+	"[vue]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
