--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,6 +9,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@iconify-prerendered/vue-fa6-brands": "^0.18.1662097805",
     "@nuxt/content": "^2.3.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia/nuxt": "^0.4.6",
