--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -8,8 +8,15 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
+  "workspaces": {
+    "nohoist": [
+      "@iconify-prerendered/vue-fa6-brands",
+      "@iconify-prerendered/vue-fa6-solid"
+    ]
+  },
   "devDependencies": {
     "@iconify-prerendered/vue-fa6-brands": "^0.18.1662097805",
+    "@iconify-prerendered/vue-fa6-solid": "^0.18.1668581498",
     "@nuxt/content": "^2.3.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia/nuxt": "^0.4.6",
