--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -2,6 +2,7 @@
   "name": "@pds/puppeteer",
   "version": "0.0.0",
   "main": "index.ts",
+  "type": "module",
   "dependencies": {
     "@types/node": "^18.11.18",
     "puppeteer": "^19.5.2",
