🔧 node cleanup script done

--- a/package.json
+++ b/package.json
@@ -2,23 +2,20 @@
   "name": "pandapaco-drawing-stats",
   "license": "MIT",
   "private": true,
-  "type": "module",
   "workspaces": [
     "apps/*",
     "packages/shared",
     "puppeteer"
   ],
   "scripts": {
-    "cleanup": "ts-node --esm ./scripts/cleanup.ts",
+    "cleanup": "node ./utils/cleanBloat.js && yarn",
     "dev:web": "yarn workspace @pds/website dev",
     "postinstall": "cd ./apps/website && nuxt prepare",
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
     "husky": "^8.0.0",
-    "prettier": "^2.8.3",
-    "ts-node": "^10.9.1"
+    "prettier": "^2.8.3"
   }
 }
