--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -15,6 +15,8 @@
     ]
   },
   "devDependencies": {
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/open-sans": "^4.5.14",
     "@iconify-prerendered/vue-fa6-brands": "^0.18.1662097805",
     "@iconify-prerendered/vue-fa6-solid": "^0.18.1668581498",
     "@nuxt/content": "^2.3.0",
