--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,8 +1,9 @@
 {
+	"private": true,
 	"name": "@pds/express",
 	"version": "0.0.0",
 	"main": "index.ts",
-	"license": "MIT",
+	"license": "GPL-3.0",
 	"scripts": {
 		"dev": "concurrently \"yarn tsc:watch\" \"nodemon -q server.ts\"",
 		"tsc:watch": "npx tsc --watch --noEmit --preserveWatchOutput",
@@ -12,17 +13,16 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"sharp": "^0.31.3"
+		"fastify": "^4.12.0"
 	},
 	"devDependencies": {
-		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.15",
+    "@types/cors": "^2.8.13",
 		"@types/node": "^18.11.17",
 		"concurrently": "^7.6.0",
 		"nodemon": "^2.0.20",
 		"ts-node-dev": "^2.0.0",
 		"tsc": "^2.0.4",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+    "tsconfig": "workspace:*"
 	}
 }
