--- a/scripts/puppeteer/package.json
+++ b/scripts/puppeteer/package.json
@@ -12,6 +12,7 @@
 		"puppeteer": "^19.5.2",
 		"redis": "^4.5.1",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+    "tsconfig": "workspace:*"
 	}
 }
