--- a/scripts/puppeteer/tsconfig.json
+++ b/scripts/puppeteer/tsconfig.json
@@ -1,15 +1,7 @@
 {
+	"extends": "tsconfig/base.json",
 	"compilerOptions": {
-		"target": "ES2020",
-		"module": "ESNext",
-		"lib": ["ES2020", "DOM"],
-		"moduleResolution": "node",
-		"strict": true,
-		"noImplicitAny": false,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"allowSyntheticDefaultImports": true
+		"lib": ["ES2020", "DOM"]
 	},
 	"ts-node": {
 		"esm": true
