--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,16 +14,19 @@
 		"@fontsource/open-sans": "^4.5.14",
 		"@iconify-prerendered/vue-fa6-brands": "^0.18.1662097805",
 		"@iconify-prerendered/vue-fa6-solid": "^0.18.1668581498",
+		"@intlify/unplugin-vue-i18n": "^0.8.1",
 		"@nuxt/content": "^2.3.0",
 		"@nuxtjs/color-mode": "^3.2.0",
 		"@pinia/nuxt": "^0.4.6",
 		"@tailwindcss/typography": "^0.5.9",
 		"@vueuse/core": "^9.11.1",
 		"autoprefixer": "^10.4.13",
+		"gsap": "^3.11.4",
 		"nuxt": "^3.0.0",
 		"pinia": "^2.0.29",
 		"postcss": "^8.4.21",
 		"sass": "^1.57.1",
-		"tailwindcss": "^3.2.4"
+		"tailwindcss": "^3.2.4",
+		"vue-i18n": "^9.2.2"
 	}
 }
