--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -28,5 +28,8 @@
 		"sass": "^1.57.1",
 		"tailwindcss": "^3.2.4",
 		"vue-i18n": "^9.2.2"
+	},
+	"dependencies": {
+		"@vercel/analytics": "^0.1.8"
 	}
 }
