⭕ Restrict Node v16 and above

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
 		"prettier:check": "prettier --check .",
 		"prettier:write": "prettier --write ."
 	},
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">= 8.0.0"
+  },
 	"devDependencies": {
 		"concurrently": "^7.6.0",
 		"husky": "^8.0.0",
