🚧 strip boilerplate; use scss

--- a/apps/admin/src-tauri/Cargo.toml
+++ b/apps/admin/src-tauri/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "lmao"
+name = "paco_stats_dashboard"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+description = "No"
+authors = ["Kuroji Fusky"]
+license = "GPT-2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
