--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.21",
     "sass": "^1.58.0",
     "tailwindcss": "^3.2.6",
+    "tsconfig": "workspace:*",
     "typescript": "^4.6.4",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
