--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
 		"prettier:check": "prettier --check .",
 		"prettier:write": "prettier --write ."
 	},
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">= 8.0.0"
-  },
+	"engines": {
+		"node": ">18.0.0",
+		"npm": ">= 8.0.0"
+	},
 	"devDependencies": {
 		"concurrently": "^7.6.0",
 		"husky": "^8.0.0",
-		"prettier": "^2.8.3"
+		"prettier": "^2.8.3",
+		"turbo": "^1.7.4"
 	}
 }
