📦 minor changes to `.npmrc`

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
 engine-strict=true
 shamefully-hoist=true
+ignore-workspace-root-check=true
 strict-peer-dependencies=false
+auto-install-peers=true
