--- a/apps/admin-vite/package.json
+++ b/apps/admin-vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-vite",
+  "name": "@pds/admin-vite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.13",
+    "config": "*",
+    "postcss": "^8.4.21",
+    "sass": "^1.58.2",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
+    "tsconfig": "*",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
