📦 add auto-import functionality on admin app

--- a/apps/admin-vite/tsconfig.json
+++ b/apps/admin-vite/tsconfig.json
@@ -14,5 +14,6 @@
 		"noEmit": true
 	},
 	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+	"files": ["./auto-imports.d.ts", "./components.d.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
