--- a/apps/admin-vite/package.json
+++ b/apps/admin-vite/package.json
@@ -18,8 +18,10 @@
 		"postcss": "^8.4.21",
 		"sass": "^1.58.2",
 		"tailwindcss": "^3.2.7",
-		"typescript": "^4.9.3",
 		"tsconfig": "*",
+		"typescript": "^4.9.3",
+		"unplugin-auto-import": "^0.14.3",
+		"unplugin-vue-components": "^0.24.0",
 		"vite": "^4.1.0",
 		"vue-tsc": "^1.0.24"
 	}
