--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -27,13 +27,14 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"@vueuse/core": "^9.11.1",
 		"autoprefixer": "^10.4.13",
-		"config": "*",
 		"gsap": "^3.11.4",
 		"nuxt": "^3.0.0",
 		"pinia": "^2.0.29",
 		"postcss": "^8.4.21",
 		"sass": "^1.57.1",
+		"sass-loader": "^13.2.0",
 		"tailwindcss": "^3.2.4",
+		"ui": "*",
 		"vue-i18n": "^9.2.2"
 	},
 	"dependencies": {
