--- a/scripts/scraper/package.json
+++ b/scripts/scraper/package.json
@@ -13,7 +13,7 @@
 		"puppeteer": "^19.5.2",
 		"redis": "^4.5.1",
 		"ts-node": "^10.9.1",
-		"tsconfig": "workspace:*",
+		"tsconfig": "*",
 		"typescript": "^4.9.4"
 	}
 }
