--- a/apps/admin-vite/package.json
+++ b/apps/admin-vite/package.json
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^4.0.0",
 		"autoprefixer": "^10.4.13",
-		"config": "workspace:*",
+		"@pds/config": "*",
 		"postcss": "^8.4.21",
 		"sass": "^1.58.2",
 		"tailwindcss": "^3.2.7",
