--- a/apps/admin-vite/package.json
+++ b/apps/admin-vite/package.json
@@ -12,14 +12,13 @@
 		"vue": "^3.2.45"
 	},
 	"devDependencies": {
+		"@pds/config": "*",
 		"@vitejs/plugin-vue": "^4.0.0",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.21",
 		"sass": "^1.58.2",
 		"tailwindcss": "^3.2.7",
-		"tsconfig": "*",
 		"typescript": "^4.9.3",
-		"ui": "*",
 		"unplugin-auto-import": "^0.14.3",
 		"unplugin-vue-components": "^0.24.0",
 		"vite": "^4.1.0",
