--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -23,6 +23,7 @@
 		"@intlify/unplugin-vue-i18n": "^0.8.1",
 		"@nuxt/content": "^2.3.0",
 		"@nuxtjs/color-mode": "^3.2.0",
+		"@pds/config": "*",
 		"@pinia/nuxt": "^0.4.6",
 		"@tailwindcss/typography": "^0.5.9",
 		"@vueuse/core": "^9.11.1",
@@ -34,7 +35,6 @@
 		"sass": "^1.57.1",
 		"sass-loader": "^13.2.0",
 		"tailwindcss": "^3.2.4",
-		"ui": "*",
 		"vue-i18n": "^9.2.2"
 	},
 	"dependencies": {
