--- a/shared/config/package.json
+++ b/shared/config/package.json
@@ -1,10 +1,12 @@
 {
-	"name": "ui",
-	"version": "1.0.0",
-	"license": "GPL-2.0",
+	"name": "@pds/config",
+	"version": "0.0.0",
 	"private": true,
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.9",
 		"tailwindcss": "^3.2.6"
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
