Revert "Merge branch 'main' of https://github.com/kuroji-fusky/pacopanda-drawing-stats into main"
This reverts commit e8ae7e42dd0f75d6a0ebb374d0b191add68043e1, reversing
changes made to 56e20868d020f465725e27b130463997fef0c7b9.

--- a/shared/tsconfig/package.json
+++ b/shared/tsconfig/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@pds/tsconfig",
+	"name": "tsconfig",
 	"version": "0.0.0",
+	"license": "GPL-2.0",
 	"private": true,
-	"files": [
-		"base.json",
-		"dom.json"
-	]
+	"publishConfig": {
+		"access": "public"
+	}
 }
