--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "pandapaco-drawing-stats",
 	"license": "GPL-2.0",
 	"private": true,
+	"type": "module",
 	"workspaces": [
 		"apps/*",
 		"shared/*",
@@ -39,6 +40,5 @@
 	"engines": {
 		"node": ">16.0.0",
 		"npm": ">= 8.0.0"
-	},
-	"packageManager": "yarn@1.22.19"
+	}
 }
