--- a/turbo.json
+++ b/turbo.json
@@ -2,12 +2,11 @@
 	"$schema": "https://turbo.build/schema.json",
 	"pipeline": {
 		"build": {
-			"dependsOn": ["^build"],
-			"outputs": ["dist", ".output"]
+			"dependsOn": ["^build"]
 		},
 		"lint": {},
 		"deploy": {
-			"dependsOn": ["build"]
+			"dependsOn": ["build", "lint"]
 		}
 	}
 }
