--- a/apps/admin-vite/package.json
+++ b/apps/admin-vite/package.json
@@ -12,9 +12,9 @@
 		"vue": "^3.2.45"
 	},
 	"devDependencies": {
+		"@pds/config": "*",
 		"@vitejs/plugin-vue": "^4.0.0",
 		"autoprefixer": "^10.4.13",
-		"pds-custom-config": "*",
 		"postcss": "^8.4.21",
 		"sass": "^1.58.2",
 		"tailwindcss": "^3.2.7",
