--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
 	"private": true,
-	"name": "@pds/express",
+	"name": "@pds/api",
 	"version": "0.0.0",
 	"main": "index.ts",
 	"license": "GPL-2.0",
@@ -16,13 +16,13 @@
 		"fastify": "^4.12.0"
 	},
 	"devDependencies": {
+		"@pds/tsconfig": "*",
 		"@types/cors": "^2.8.13",
 		"@types/node": "^18.11.17",
 		"concurrently": "^7.6.0",
 		"nodemon": "^2.0.20",
 		"ts-node-dev": "^2.0.0",
 		"tsc": "^2.0.4",
-		"typescript": "^4.9.4",
-		"tsconfig": "workspace:*"
+		"typescript": "^4.9.4"
 	}
 }
