--- a/shared/config/package.json
+++ b/shared/config/package.json
@@ -1,7 +1,6 @@
 {
-	"name": "pds-custom-config",
-	"version": "1.0.0",
-	"license": "GPL-2.0",
+	"name": "@pds/config",
+	"version": "0.0.0",
 	"private": true,
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.9",
