--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"husky": "^8.0.0",
 		"lint-staged": "^13.1.2",
 		"prettier": "^2.8.3",
-		"turbo": "^1.7.4"
+		"turbo": "latest"
 	},
 	"engines": {
 		"node": ">16.0.0",
