--- a/package.json
+++ b/package.json
@@ -14,15 +14,12 @@
   },
   "scripts": {
     "cleanup": "node ./scripts/cleanBloat.js && yarn",
-    "dev:web": "yarn workspace @pds/website dev",
-    "build:web": "yarn workspace @pds/website build",
-    "preview:web": "yarn workspace @pds/website preview",
-    "dev:admin": "yarn workspace @pds/admin-vite dev",
-    "build:admin": "yarn workspace @pds/admin-vite build",
-    "preview:admin": "yarn workspace @pds/admin-vite preview",
+    "dev:web": "turbo dev --filter=website",
+    "build:web": "turbo build --filter=website",
+    "dev:admin": "turbo dev --filter=admin-vite",
+    "build:admin": "turbo build --filter=admin-vite",
     "dev": "turbo dev",
     "build": "turbo build",
-    "preview": "concurrently -k \"yarn:preview:*\"",
     "puppeteer": "yarn workspace @pds/puppeteer start",
     "postinstall": "cd apps/website && nuxt prepare",
     "prepare": "husky install",
