--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"husky": "^8.0.0",
 		"lint-staged": "^13.1.2",
 		"prettier": "^2.8.3",
-		"turbo": "latest"
+		"turbo": "^1.8.2"
 	},
 	"engines": {
 		"node": ">16.0.0",
