--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 node_modules
 *.log*
 .turbo
-venv
 
+# python stuff
 *.idea
-!python/.idea
+venv
+__pycache__
+
+# Ignore any 'tl.json' files used for updaters sent to Redis
+*tl.json
+*.ipynb
