--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install types-colorama
 
       - name: Type-check scripts
         run: mypy .
