--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,7 @@
 [mypy]
 warn_unused_configs = True
 check_untyped_defs = True
+exclude = venv
+
+[mypy-fake_useragent]
+ignore_missing_imports = True
