--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -1,4 +1,4 @@
-name: Python Typing & Linter
+name: mypy typing
 
 on:
   push:
@@ -21,12 +21,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.11.2
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install types-colorama
+          mypy --install-types
 
       - name: Type-check scripts
-        run: mypy .
+        run: mypy .   
