--- a/.github/workflows/python-type-checks.yml
+++ b/.github/workflows/python-type-checks.yml
@@ -26,8 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          mypy --install-types
+          poetry install
 
       - name: Type-check scripts
         run: mypy .
