--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ fake-useragent = "^1.1.3"
 redis = "^4.5.4"
 mypy = "^1.2.0"
 colorama = "0.4.6"
+types-requests = "^2.28.11.17"
+types-beautifulsoup4 = "^4.12.0.3"
 
 [build-system]
 requires = ["poetry-core"]
