--- a/app/package.json
+++ b/app/package.json
@@ -9,13 +9,6 @@
 		"generate": "nuxt generate",
 		"preview": "nuxt preview"
 	},
-	"workspaces": {
-		"nohoist": [
-			"@iconify-prerendered/vue-fa6-brands",
-			"@iconify-prerendered/vue-fa6-solid",
-			"@pds/config"
-		]
-	},
 	"devDependencies": {
 		"@fontsource/inter": "^4.5.15",
 		"@fontsource/open-sans": "^4.5.14",
@@ -33,8 +26,7 @@
 		"pinia": "^2.0.29",
 		"postcss": "^8.4.21",
 		"sass": "^1.57.1",
-		"tailwindcss": "^3.2.4",
-		"vue-i18n": "^9.2.2"
+		"tailwindcss": "^3.2.4"
 	},
 	"dependencies": {
 		"@vercel/analytics": "^0.1.8"
