--- a/apps/admin/src-tauri/Cargo.toml
+++ b/apps/admin/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "admin"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+description = "Manage Paco characters via the database"
+authors = ["Kerby Keith Aquino"]
+license = "MIT"
+repository = "https://github.com/kuroji-fusky/pacopanda-drawing-stats"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
