--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin",
+  "name": "@pds/admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,7 +18,12 @@
     "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
   }
