--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "parinton"
 version = "0.1.0"
-description = "Local scraper and parser library for collecting public drawing data from Paco"
+description = "Local scraper and parser library for collecting public drawing data from Paco Panda"
 authors = ["Kerby Keith Aquino <skepfoosky15@gmail.com>"]
 readme = "README.md"
 packages = [{include = "parinton"}]
@@ -18,6 +18,7 @@ mypy = "^1.2.0"
 colorama = "0.4.6"
 types-requests = "^2.28.11.17"
 types-beautifulsoup4 = "^4.12.0.3"
+pydantic = "^1.10.7"
 
 [build-system]
 requires = ["poetry-core"]
