--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@pds/config": "*",
     "@tauri-apps/api": "^1.2.0",
     "sass": "^1.62.0",
     "vue": "^3.2.45"
