--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -19,12 +19,13 @@
 		"@iconify-prerendered/vue-fa6-solid": "^0.18.1668581498",
 		"@nuxt/content": "^2.3.0",
 		"@nuxtjs/color-mode": "^3.2.0",
-		"@pinia/nuxt": "^0.4.6",
 		"@pds/config": "*",
+		"@pinia/nuxt": "^0.4.6",
 		"@tailwindcss/typography": "^0.5.9",
 		"@vueuse/core": "^9.11.1",
 		"autoprefixer": "^10.4.13",
 		"gsap": "^3.11.4",
+		"lucide-vue-next": "^0.166.0",
 		"nuxt": "^3.0.0",
 		"pinia": "^2.0.29",
 		"postcss": "^8.4.21",
