--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ colorama = "0.4.6"
 types-requests = "^2.28.11.17"
 types-beautifulsoup4 = "^4.12.0.3"
 pydantic = "^1.10.7"
+nextcord = "^2.4.2"
 
 [build-system]
 requires = ["poetry-core"]
