--- a/.github/workflows/python-type-checks.yml
+++ b/.github/workflows/python-type-checks.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - main
 
+env:
+  PYTHON_VERSION: "3.11"
+  POETRY_VERSION: "1.4.2"
+  POETRY_URL: https://install.python-poetry.org
+
 jobs:
   type-check:
     name: Type-checking via mypy
@@ -15,18 +20,30 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.11.2
-          cache: "pip"
+          python-version: ${{ env.PYTHON_VERSION }}
+        id: setup_python
 
-      - name: Install dependencies
+      - name: Cache deps
+        uses: actions/cache@v3
+        with:
+          path: ~/.local
+          key: poetry-local-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('.github/workflows/*.yml') }}
+
+      - name: Install Poetry ${{ env.POETRY_VERSION }}
         run: |
-          python -m pip install --upgrade pip
+          cd python
+          curl -sSL ${{ env.POETRY_URL }} | python - --version ${{ env.POETRY_VERSION }}
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Install Dependencies
+        run: | 
           poetry install
+          mypy --install-types
 
       - name: Type-check scripts
         run: mypy .
