--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -19,7 +19,7 @@
 		"@iconify-prerendered/vue-fa6-solid": "^0.18.1668581498",
 		"@nuxt/content": "^2.3.0",
 		"@nuxtjs/color-mode": "^3.2.0",
-		"@pds/config": "*",
+		"@pds/ui": "*",
 		"@pinia/nuxt": "^0.4.6",
 		"@tailwindcss/typography": "^0.5.9",
 		"@vueuse/core": "^9.11.1",
